Refactor Speed Typing Game components and update Astro configuration

--- a/src/pages/typespeed.astro
+++ b/src/pages/typespeed.astro
@@ -1,10 +1,14 @@
 ---
-import BaseLayout from "@/layouts/BaseLayout.astro";
 import App from "../components/App";
+import BaseLayout from "../layouts/BaseLayout.astro";
 ---
 
-<BaseLayout>
-  <link rel="stylesheet" href="/SpeedTyping.css" />
+<BaseLayout title="Your Page Title">
+  <link
+    rel="stylesheet"
+    href="src/components/SpeedTypingGame/SpeedTyping.css"
+  />
+
   <div class="typing-container">
     <App client:load />
   </div>
