--- a/src/pages/typespeed.astro
+++ b/src/pages/typespeed.astro
@@ -9,7 +9,7 @@ import BaseLayout from "../layouts/BaseLayout.astro";
     href="src/components/SpeedTypingGame/SpeedTyping.css"
   />
 
-  <div class="typing-container">
+  <div class="typing-container" style="display: flex; justify-content: center; align-items: center; margin: 50px auto;">
     <App client:load />
   </div>
 </BaseLayout>
