--- a/src/pages/db.astro
+++ b/src/pages/db.astro
@@ -7,10 +7,16 @@ import BaseLayout from "../layouts/BaseLayout.astro";
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 100vh;
+    height: 70vh;
   }
 </style>
 <BaseLayout title="Your Title Here">
+  <div style="display: flex; justify-content: center; align-items: center; padding-top: 10px; flex-direction: column;">
+    <h1 style="font-weight: bold !important; background: linear-gradient(to right, #ff7e5f, #feb47b) !important; -webkit-background-clip: text !important; color: transparent !important;">
+      Pathfinding (Searching) Algorithms Visualiser
+    </h1>
+    <h2>How to Play</h2>
+  </div>
   <div class="center">
     <a href="https://pratyush103.github.io/MazeRunner/">
       <img src="part1.gif" alt="Click to redirect" />
